--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "react-semantic-redux-form": "^1.2.6",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
